fix see all image/text spacing issue

--- a/src/css/modules/see_all.scss
+++ b/src/css/modules/see_all.scss
@@ -77,6 +77,7 @@
 					position: relative;
 					float: left;
 					margin-right: 10px;
+					min-width: 120px;
 
 					img {
 						max-width: 120px;
